--- a/style.css
+++ b/style.css
@@ -7,6 +7,11 @@
     padding: 1rem;
 }
 
+.rectangle {
+  -webkit-backdrop-filter: blur(20px);
+  backdrop-filter: blur(20px);
+}
+
 .container {
     width: 100vw;
     height: 100vh;
@@ -19,12 +24,8 @@
     font-family: "audiowide";;
     font-size: 500%;
     text-align: center;
+    backdrop-filter: blur(15px);
 }
-
-.column {
-    float: left;
-    width: 50%;
-  }
   
   .row:after {
     content: "";
@@ -41,13 +42,19 @@
 
 input {
     all: unset;
-    
-    color: #fff;
+        color: rgb(0, 0, 0);
     height: 100%;
     width: 100%;
     padding: 6px 10px;
   }
 
-  .box {
-    opacity: 10%
-  }
+.container {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.box {
+  background-color:  white;
+  
+}
