--- a/style.css
+++ b/style.css
@@ -1,15 +1,64 @@
 .background {
     background-color:rgb(134, 129, 227);
+    background-image: url(https://media.self.com/photos/5e70f72443731c000882cfe7/4:3/w_2560%2Cc_limit/GettyImages-125112134.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
     height: 100vh;
     width: 100vw;
 }
-.header {
-    padding: 1rem;
+
+.row{
+  display: flex;
+  justify-content: center;
+  justify-items: center;
+  padding-left: 50px; 
 }
 
-.rectangle {
-  -webkit-backdrop-filter: blur(20px);
-  backdrop-filter: blur(20px);
+p{
+  text-decoration: solid;
+  font-size: 20px;
+  font-weight: 700;
+  padding: 5px;
+  color: #fff;
+}
+
+.buttonfind{
+  background-color: #fff;
+  width: max-content;
+  display: flex;
+  flex-direction: column;
+  border-radius: 5px;
+}
+
+ul{
+  background-color: rgb(242, 218, 245);
+  opacity: 0.6;  
+  border-radius: 10px;
+  text-decoration: #fff;
+  padding: 3px;
+}
+
+.container2{
+  background-color: rgb(242, 218, 245);
+  opacity: 0.6; 
+  border-radius: 10px;
+  
+}
+
+.container2 li{
+  padding: 4px;
+  list-style: none;
+}
+
+li{
+  color: black;
+  text-decoration: none;
+}
+
+
+.header {
+    padding: 1rem;
 }
 
 .container {
@@ -24,27 +73,36 @@
     font-family: "audiowide";;
     font-size: 500%;
     text-align: center;
-    backdrop-filter: blur(15px);
 }
+
+.column {
+    float: center;
+    width: 10%;
+  
+  }
   
   .row:after {
     content: "";
     display: table;
     clear: both;
+    padding: 10px;
   }
 
-.background {
-    background-image: url(https://media.self.com/photos/5e70f72443731c000882cfe7/4:3/w_2560%2Cc_limit/GettyImages-125112134.jpg);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-}
 
 input {
     all: unset;
-        color: rgb(0, 0, 0);
+    color: rgb(201, 27, 27);
     height: 100%;
     width: 100%;
     padding: 6px 10px;
   }
 
+  .box {
+    opacity: 10%
+  }
+  
+  .map{
+    height: 200;
+    width: 30%;
+
+  }
